# octotools

./: .env.template  .gitignore  01_solver_.md  02_llm_engine_.md  03_tool_.md  04_memory_.md  05_planner_.md  06_executor_.md  07_initializer_.md  08_data_formatters_.md  09_caching___cachedengine___.md  LICENSE  README.md  index.md  pyproject.toml  requirements.txt  test.ipynb
examples/notebooks/: baseball_query_gpt4o.ipynb  baseball_query_local_model_qwen.ipynb  baseball_query_parallel_inference.ipynb  baseball_query_qwen.ipynb  baseball_query_qwen_local.ipynb  baseball_query_vllm.ipynb  game24_query_gpt4o.ipynb  game24_query_qwen.ipynb  text_query.ipynb  text_query_gpt4o.ipynb  text_query_qwen.ipynb  vllm_config.yaml
octotools/: solver.py
octotools/engine/: anthropic.py  azure.py  deepseek.py  factory.py  gemini.py  litellm.py  openai.py  together.py  vllm.py  xai.py
octotools/models/: executor.py  initializer.py  planner.py
octotools/tools/: README.md
octotools/tools/generalist_solution_generator/: tool.py
octotools/tools/image_captioner/: tool.py
octotools/tools/python_code_generator/: tool.py
octotools/tools/relevant_patch_zoomer/: tool.py
src/octotools/: solver.py
src/octotools/engine/: anthropic.py  factory.py  gemini.py  together.py
tasks/: solve.py
tasks/medqa/: o1-pro.ipynb  o1.ipynb  o3-mini.ipynb  quick_demo_claude.sh  quick_demo_gpt.sh  test_demo_other_engines.sh  togeter_demo.ipynb
tasks/medqa/data/: data.json
tasks/vqav2/: test_demo_other_engines.sh
tutorials/: 01_solver_.md  02_llm_engine_.md  03_tool_.md  04_memory_.md  05_planner_.md  06_executor_.md  07_initializer_.md  08_data_formatters_.md  09_caching___cachedengine___.md  index.md
util/: compare_octo_with_generic.py  test_azure_connection.py  test_octotools.py
util/outputs/Barber_Paradox/: 20250626T141149-c94e9a_generic.txt  20250626T141149-c94e9a_octo.txt  question.txt
util/outputs/Easy_River_Crossing/: 20250626T141831-2fbdc0_generic.txt  20250626T141831-2fbdc0_octo.txt  question.txt
util/outputs/Monty_Hall_Problem/: 20250626T140845-ad85f0_generic.txt  20250626T140845-ad85f0_octo.txt  question.txt
(+8 files in other folders)
